--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tow projekt</title>
-    <link rel="stylesheet" href="/css/normaliz.css">
-    <link rel="stylesheet" href="/css/sss.css">
+    <title>mostfa safi</title>
+    <link rel="stylesheet" href="css/normaliz.css">
+    <link rel="stylesheet" href="css/sss.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="/css/‏‏tow projekt.css">
+<link rel="stylesheet" href="css/‏‏tow projekt.css">
 <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Inspiration&family=Noto+Kufi+Arabic:wght@100;300&family=Open+Sans:ital,wght@0,400;0,800;1,600&family=Work+Sans:ital,wght@0,100;0,400;0,500;0,700;1,500;1,800&display=swap" rel="stylesheet">
 <!-- -->
 </head>
