--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
 
+ 
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mostfa safi</title>
-    <link rel="stylesheet" href="css/normaliz.css">
-    <link rel="stylesheet" href="css/sss.css">
+    <link rel="stylesheet" href="./css/normaliz.css">
+    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/sss.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="css/‏‏tow projekt.css">
 <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Inspiration&family=Noto+Kufi+Arabic:wght@100;300&family=Open+Sans:ital,wght@0,400;0,800;1,600&family=Work+Sans:ital,wght@0,100;0,400;0,500;0,700;1,500;1,800&display=swap" rel="stylesheet">
 <!-- -->
 </head>
@@ -21,7 +22,7 @@
 <header>
     <div class="container">
         <a href="">
-                    <img src="/fold/logo.png" alt="">
+                    <img src="fold/logo.png" alt="">
         </a>
         <div class="text-header">
             <ul>
@@ -114,7 +115,7 @@
         <!-- start DESIGNS  -->
         <div class="design">
             <div class="image">
-              <img src="/fold/mobile.png" alt="Mobile" />
+              <img src="fold/mobile.png" alt="Mobile" />
             </div>
             <div class="text">
               <h2>Our Design Comes With...</h2>
@@ -148,56 +149,56 @@
             <div class="grid">
                <div class="box-grid">
                     <div class="box">
-                        <img src="/fold/shuffle-01.jpg" alt="">
+                        <img src="fold/shuffle-01.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fold/shuffle-02.jpg" alt="">
+                        <img src="fold/shuffle-02.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                            <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fold/shuffle-03.jpg" alt="">
+                        <img src="fold/shuffle-03.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                            <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fold/shuffle-04.jpg" alt="">
+                        <img src="fold/shuffle-04.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fold/shuffle-05.jpg" alt="">
+                        <img src="fold/shuffle-05.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fold/shuffle-06.jpg" alt="">
+                        <img src="fold/shuffle-06.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fold/shuffle-07.jpg" alt="">
+                        <img src="fold/shuffle-07.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="/fold/shuffle-08.jpg" alt="">
+                        <img src="fold/shuffle-08.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
@@ -213,7 +214,7 @@
         <!-- start ABOUT-US  -->
         <div class="video">
       <video autoplay muted loop>
-        <source src="/fold/Kasper - Template Two.mp4" type="video/mp4" />
+        <source src="fold/Kasper - Template Two.mp4" type="video/mp4" />
       </video>
       <div class="text">
         <h2>Super Awesome Video Here</h2>
@@ -235,7 +236,7 @@
                   tincidunt.
                 </p>
               </div>
-              <img src="/fold/about.png" alt="" />
+              <img src="fold/about.png" alt="" />
             </div>
           </div>
           <!-- End About -->
@@ -275,7 +276,7 @@
           tincidunt.
         </p>
         <div class="content">
-          <img src="/fold/skills-02.jpg" alt="" />
+          <img src="fold/skills-02.jpg" alt="" />
           <div class="text">
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
             tincidunt.
@@ -283,7 +284,7 @@
           </div>
         </div>
         <div class="content">
-          <img src="/fold/skills-01.jpg" alt="" />
+          <img src="fold/skills-01.jpg" alt="" />
           <div class="text">
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
             tincidunt.
@@ -469,7 +470,7 @@
 <!--------------------------- start footer ------------------------->
 <footer>
     <div class="box-footer">
-            <img src="/fold/logo.png" alt="">
+            <img src="fold/logo.png" alt="">
         <h2>WE ARE SOCIAL</h2>
         <ul>
              <i class="fab fa-facebook-f"></i>
