--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header>
     <div class="container">
         <a href="">
-                    <img src="fold/logo.png" alt="">
+                    <img src="./fold/logo.png" alt="">
         </a>
         <div class="text-header">
             <ul>
@@ -115,7 +115,7 @@
         <!-- start DESIGNS  -->
         <div class="design">
             <div class="image">
-              <img src="fold/mobile.png" alt="Mobile" />
+              <img src="./fold/mobile.png" alt="Mobile" />
             </div>
             <div class="text">
               <h2>Our Design Comes With...</h2>
@@ -149,21 +149,21 @@
             <div class="grid">
                <div class="box-grid">
                     <div class="box">
-                        <img src="fold/shuffle-01.jpg" alt="">
+                        <img src="./fold/shuffle-01.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="fold/shuffle-02.jpg" alt="">
+                        <img src="./fold/shuffle-02.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                            <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="fold/shuffle-03.jpg" alt="">
+                        <img src="./fold/shuffle-03.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                            <p>Lorem ipsum ad</p>
@@ -177,14 +177,14 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="fold/shuffle-05.jpg" alt="">
+                        <img src="./fold/shuffle-05.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="fold/shuffle-06.jpg" alt="">
+                        <img src="./fold/shuffle-06.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <img src="fold/shuffle-08.jpg" alt="">
+                        <img src="./fold/shuffle-08.jpg" alt="">
                         <div class="text-p">
                             <h3>Awesome Image</h3>
                             <p>Lorem ipsum ad</p>
@@ -236,7 +236,7 @@
                   tincidunt.
                 </p>
               </div>
-              <img src="fold/about.png" alt="" />
+              <img src="./fold/about.png" alt="" />
             </div>
           </div>
           <!-- End About -->
@@ -284,7 +284,7 @@
           </div>
         </div>
         <div class="content">
-          <img src="fold/skills-01.jpg" alt="" />
+          <img src="./fold/skills-01.jpg" alt="" />
           <div class="text">
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
             tincidunt.
@@ -470,7 +470,7 @@
 <!--------------------------- start footer ------------------------->
 <footer>
     <div class="box-footer">
-            <img src="fold/logo.png" alt="">
+            <img src="./fold/logo.png" alt="">
         <h2>WE ARE SOCIAL</h2>
         <ul>
              <i class="fab fa-facebook-f"></i>
